# quasielasticbayes

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  meson.build  pyproject.toml  qeb-dev-linux-py310.yml  qeb-dev-linux-py38.yml  qeb-dev-win-py310.yml  qeb-dev-win-py38.yml  setup.py
.github/workflows/: build_and_test.yml  ubuntu.yml  windows.yml
conda/: conda-build-py310.yml  conda_build_config.yaml  meta.yaml  pypi-build-py310.yml
conda/develop/: qeb-linux-py38.yml
conda/recipe/: conda_build_config.yaml  meta.yaml  qeb-build-py310.yml  qeb-ci-py310.yml  qeb-test-py310.yml
conda_envs/: pypi-build-py310-linux.yml  pypi-build-py310-macos-arm.yml  pypi-build-py310-macos.yml  pypi-build-py310-win.yml  pypi-build-py310-windows.yml  pypi-build-py310.yml  qeb-build-env-linux.yml  qeb-build-env-macos.yml  qeb-build-env-macos_arm.yml  qeb-build-env-windows.yml
quasielasticbayes/: Four.f90  Four_main.f90  QLdata_main.f90  QLdata_subs.f90  QLres_subs.f90  QLse_subs.f90  Quest_main.f90  Quest_subs.f90  ResNorm_main.f90  Simopt.f90  mod_data.f90  mod_files.f90  options.f90  res_par.f90  testing.py
quasielasticbayes/test/: qldata_test.py  qlres_test.py  qlse_test.py  testing.py
quasielasticbayes/test/data/qlres/: qlres-input-spec-0.json  qlres-output-spec-0.json
quasielasticbayes/test/data/qlse/: qlse_input.json  qlse_output.json
scripts/: clean.sh  rebuild.sh
src/quasielasticbayes/: Bayes.f90  BlrRes.f90  QLres_main.f90  QLse_main.f90  ResNorm_subs.f90  Util.f90  loc_size.f90  meson.build
src/quasielasticbayes/build_helper/: trim_fflags.py
src/quasielasticbayes/test/: Four_test.py  qlse_test.py
src/quasielasticbayes/test/data/qldata/: qldata_input.json  qldata_output.json
src/quasielasticbayes/test/data/qlse/: qlse_output.json
